// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item should display input value with error 1`] = `
<li
  className="undefined tc-enumeration-item has-error"
  id="0-item"
>
  <input
    autoFocus={true}
    className="undefined tc-enumeration-item-label"
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
  />
  <div
    className="undefined tc-enumeration-item-actions"
  >
    <button
      className="btn btn-link"
      disabled={false}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    />
    <button
      className="btn btn-link"
      disabled={false}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    />
  </div>
  <div
    className="undefined tc-enumeration-item-error"
  >
    an error occured
  </div>
</li>
`;

exports[`Item should display input value with two buttons 1`] = `
<li
  className="undefined tc-enumeration-item"
  id="0-item"
>
  <input
    autoFocus={true}
    className="undefined tc-enumeration-item-label"
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
  />
  <div
    className="undefined tc-enumeration-item-actions"
  >
    <button
      className="btn btn-link"
      disabled={false}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    />
    <button
      className="btn btn-link"
      disabled={false}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    />
  </div>
</li>
`;

exports[`Item should display input value with two buttons. The validate button is disabled 1`] = `
<li
  className="undefined tc-enumeration-item"
  id="0-item"
>
  <input
    autoFocus={true}
    className="undefined tc-enumeration-item-label"
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
  />
  <div
    className="undefined tc-enumeration-item-actions"
  >
    <button
      className="btn btn-link"
      disabled={true}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    />
    <button
      className="btn btn-link"
      disabled={false}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    />
  </div>
</li>
`;
